[project]
name = "paperspace-comfyui-suite"
version = "0.1.0"
description = "Jupyter server proxy launcher entries for ComfyUI"
requires-python = ">=3.8"
dependencies = [
    "jupyter-server-proxy>=4.1.0",
]

[project.entry-points."jupyter_serverproxy_servers"]
# 各サーバーを個別に設定 - これらの名前がランチャーに表示される
comfyui = "paperspace_comfyui_suite:get_comfyui_config"

[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-data]
"*" = ["*.svg"]